--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: #f3f3f3;
+  font-family: "segoe ui";
   margin: 0;
   padding: 0;
 }
@@ -54,5 +55,157 @@ body {
   }
   .ql-toolbar.ql-snow {
     display: none;
+  }
+}
+
+/* Navbar */
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+  background-color: #ffffff;
+  position: relative;
+}
+
+.nav > .nav-header {
+  display: inline;
+}
+
+.nav > .nav-header > .nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #000000;
+  padding: 10px 10px 10px 10px;
+}
+
+.nav > .search-bar {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 50%;
+  height: 100%;
+  margin-inline: 15rem;
+  & > input {
+    width: 100%;
+    height: 70%;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    background-color: rgb(240, 240, 240);
+    padding-inline: 40px;
+    &:focus {
+      background-color: white;
+      box-shadow: 1px 1px 3px 0px #c2c2c2;
+    }
+  }
+
+  & > span {
+    position: absolute;
+    left: 10px;
+    opacity: 80%;
+  }
+}
+
+.nav > .nav-btn {
+  display: none;
+}
+
+.nav > .nav-links {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  float: right;
+  font-size: 18px;
+  margin-inline-end: 10px;
+}
+.nav > .nav-links > button {
+  height: 70%;
+  border-radius: 3px;
+  border: none;
+  background-color: rgb(0, 153, 255);
+  cursor: pointer;
+  & > span {
+    color: white;
+  }
+}
+
+.nav > .nav-links > a {
+  display: inline-block;
+  padding: 13px 10px 13px 10px;
+  text-decoration: none;
+  color: #efefef;
+}
+
+.nav > .nav-links > a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.nav > #nav-check {
+  display: none;
+}
+
+.body {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  margin-inline: 12rem;
+  margin-top: 3rem;
+  gap: 1rem;
+}
+
+.card {
+  width: 100%;
+  height: 250px;
+  border: 1px solid rgba(165, 165, 165, 0.735);
+  border-radius: 3px;
+}
+
+@media (max-width: 600px) {
+  .nav > .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label:hover,
+  .nav #nav-check:checked ~ .nav-btn > label {
+    background-color: rgb(240, 240, 240);
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 8px;
+    border-top: 2px solid #3e3e3e;
+  }
+  .nav > .nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #333;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
+  }
+  .nav > .nav-links > a {
+    display: block;
+    width: 100%;
+  }
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
+  }
+  .nav > #nav-check:checked ~ .nav-links {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
   }
 }
