--- a/client/src/index.css
+++ b/client/src/index.css
@@ -278,6 +278,45 @@ input:focus ~ .highlight {
   }
 }
 
+/* Modal */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* Navbar */
 .nav {
   display: flex;
@@ -292,9 +331,12 @@ input:focus ~ .highlight {
 .nav > .nav-header {
   display: flex;
   align-items: center;
-  gap: 1px;
-  & > img {
-    max-width: 8%;
+  /* gap: 1px; */
+  & > div {
+    width: 3rem;
+    & > img {
+      width: 90%;
+    }
   }
 }
 
@@ -382,55 +424,60 @@ input:focus ~ .highlight {
 }
 
 .card {
+  position: relative;
   width: 100%;
-  height: 250px;
+  height: 200px;
   border: 1px solid rgba(165, 165, 165, 0.735);
+  border-bottom: 0px;
   border-radius: 3px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  & > .card-body {
+    width: 100%;
+    height: 100%;
+  }
+  & > .card-metadata {
+    position: absolute;
+    cursor: pointer;
+    width: 100%;
+    height: 30px;
+    top: 200px;
+    text-align: center;
+    background-color: #3e90fd;
+    color: white;
+    border: 1px solid rgba(165, 165, 165, 0.735);
+    border-radius: 3px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    &:hover {
+      box-shadow: 0px 0px 7px #7bb0f77d;
+      background-color: #3882e4;
+    }
+  }
 }
 
+@media (max-width: 990px) {
+  .body {
+    margin-inline: 4rem;
+  }
+}
+
+@media (max-width: 770px) {
+  .nav > .search-bar {
+    display: none;
+  }
+  .body {
+    grid-template-columns: auto auto auto auto;
+  }
+}
 @media (max-width: 600px) {
-  .nav > .nav-btn {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
+  .body {
+    margin-inline: 1rem;
+    grid-template-columns: auto auto auto;
   }
-  .nav > .nav-btn > label {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    padding: 13px;
-  }
-  .nav > .nav-btn > label:hover,
-  .nav #nav-check:checked ~ .nav-btn > label {
-    background-color: rgb(240, 240, 240);
-  }
-  .nav > .nav-btn > label > span {
-    display: block;
-    width: 25px;
-    height: 8px;
-    border-top: 2px solid #3e3e3e;
-  }
-  .nav > .nav-links {
-    position: absolute;
-    display: block;
-    width: 100%;
-    background-color: #333;
-    height: 0px;
-    transition: all 0.3s ease-in;
-    overflow-y: hidden;
-    top: 50px;
-    left: 0px;
-  }
-  .nav > .nav-links > a {
-    display: block;
-    width: 100%;
-  }
-  .nav > #nav-check:not(:checked) ~ .nav-links {
-    height: 0px;
-  }
-  .nav > #nav-check:checked ~ .nav-links {
-    height: calc(100vh - 50px);
-    overflow-y: auto;
+}
+@media (max-width: 450px) {
+  .body {
+    grid-template-columns: auto auto;
   }
 }
