--- a/client/src/index.css
+++ b/client/src/index.css
@@ -280,26 +280,17 @@ input:focus ~ .highlight {
 
 /* Modal */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* The Close Button */
@@ -315,6 +306,81 @@ input:focus ~ .highlight {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  border-radius: 0.5rem;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+}
+@media (max-width: 800px) {
+  .modal-content {
+    width: 60%;
+  }
+}
+@media (max-width: 550px) {
+  .modal-content {
+    width: 70%;
+  }
+}
+@media (max-width: 450px) {
+  .modal-content {
+    width: 80%;
+  }
+}
+.modal-title {
+  font-size: large;
+  font-weight: bold;
+}
+.modal-body {
+  & > div {
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+    & > input {
+      width: 100%;
+      height: 70%;
+      border: none;
+      outline: none;
+      border-radius: 5px;
+      background-color: rgb(240, 240, 240);
+      padding-inline: 10px;
+      &:focus {
+        background-color: white;
+        box-shadow: 1px 1px 3px 0px #c2c2c2;
+      }
+    }
+    & > div {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 0.5rem;
+      & > button {
+        height: 2rem;
+        color: white;
+        border: none;
+        outline: none;
+        border-radius: 3px;
+        padding-inline: 0.5rem;
+      }
+      & > .submit {
+        background-color: rgb(240, 240, 240);
+        color: black;
+        &:hover {
+          background-color: rgb(218, 218, 218);
+        }
+      }
+      & > .create {
+        background-color: #3882e4;
+        &:hover {
+          background-color: #3173ca;
+        }
+      }
+    }
+  }
 }
 
 /* Navbar */
