--- a/client/src/index.css
+++ b/client/src/index.css
@@ -449,6 +449,7 @@ input:focus ~ .highlight {
 
 .nav > .nav-links {
   display: flex;
+  gap: 1rem;
   align-items: center;
   height: 100%;
   float: right;
@@ -460,6 +461,7 @@ input:focus ~ .highlight {
   border-radius: 3px;
   border: none;
   background-color: rgb(0, 153, 255);
+  color: white;
   cursor: pointer;
   & > span {
     color: white;
